--- a/main.html
+++ b/main.html
@@ -7,7 +7,14 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h1>gravity</h1>
+	<nav>
+	<a href id:nav-actor="https://www.youtube.com/">fhgfhsdg</a>
+		<a href id:nav-quote="https://www.youtube.com/">gytrturuy</a>
+		
+	</nav>
+	<summary>kjsdhkjsfdowiuripoqwurpornvkjkl</summary>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
