--- a/main.html
+++ b/main.html
@@ -14,7 +14,11 @@
 		
 	</nav>
 	<summary>kjsdhkjsfdowiuripoqwurpornvkjkl</summary>
-	
+	<section id="actor">kjhdfkjd</section>
+	<section id="quote">fhkjdfkl</section>
+	<aside>IMDb rating:4</aside>
+	<aside>release date:675684</aside>
+	<footer>produced by:< name>dsjbfkjds</name></footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
