--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h1>gravity</h1>
+	<header>gravity</header>
 	<nav>
 	<a href id:nav-actor="https://www.youtube.com/">fhgfhsdg</a>
 		<a href id:nav-quote="https://www.youtube.com/">gytrturuy</a>
