--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 	<section id="quote">fhkjdfkl</section>
 	<aside>IMDb rating:4</aside>
 	<aside>release date:675684</aside>
-	<footer>produced by:< name>dsjbfkjds</name></footer>
+	<footer>Produced by:< name>dsjbfkjds</name></footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
