--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 	<header>gravity</header>
 	<nav>
-	<a href id="nav-actor="https://www.youtube.com/">fhgfhsdg</a>
-		<a href id="nav-quote="https://www.youtube.com/">gytrturuy</a>
+	<a  id="nav-actor=" href="#actor">Actors</a>
+		<a id="nav-quote" href="#quote">Quotes</a>
 		
 	</nav>
 	<summary>kjsdhkjsfdowiuripoqwurpornvkjkl</summary>
