--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 	<header>gravity</header>
 	<nav>
-	<a  id="#nav-actor" href="#actor">Actors</a>
-		<a id="#nav-quote" href="#quote">Quotes</a>
+	<a  id="nav-actor" href="#actor">Actors</a>
+		<a id="nav-quote" href="#quote">Quotes</a>
 		
 	</nav>
 	<summary>kjsdhkjsfdowiuripoqwurpornvkjkl</summary>
